import React from 'react';
import { render } from '@testing-library/react';
import { Provider } from 'react-redux';
import { store } from './app/store';
import App from './App';

test('renders learn react link', () => {
  const { container } = render(<App />)
  container.querySelector('.App')
  expect(container.firstChild).toMatchSnapshot()
});
